mise ne place du css <aside>

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <meta name="description" content="Template to start HTML">
     <link rel="stylesheet" href="styles.css/style.css">
 
 </head>
 
 <body>
-    <!-- ---------------------------début nav------------------------------- -->
+    <!-- début nav -->
     <nav>
         <img src="images/logo/Booki.png" alt="logo">
 
@@ -29,7 +29,7 @@
         </ul>
 
     </nav>
-    <!-- -------------------------------Fin nav------------------------- -->
+    <!-- Fin nav s-->
 
     <!-- ---------------------------------Début header------------------------ -->
 
@@ -69,41 +69,41 @@
     <!-- -------------------------------------Fin header------------------------------ -->
     <section>
         <article>
-            <h1>Hébergement à Marseille</h1>
+            <h2>Hébergement à Marseille</h2>
             <!-- ----------------------------------------1re ligne----------------------------------------------- -->
             <div class="first-choice">
                 <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                             alt="hébergement-canebière">
-                        <h2>Auberge Canebière</h2>
-                        <h3>Nuit à partir de 25€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                        <h3>Auberge Canebière</h3>
+                        <P>Nuit à partir de 25€<P>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
                 <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                             alt="hébergement-canebière">
-                        <h2>Hôtel du port</h2>
-                        <h3>Nuit à partir de 52€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                        <h3>Hôtel du port</h3>
+                        <P>Nuit à partir de 52€<P>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
                 <div class="option">
                     <a href="#">
                         <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                             alt="hébergement-canebière">
-                        <h2>Hôtel Les mouettes</h2>
-                        <h3>Nuit à partir de 76€</h3>
+                        <h3>Hôtel Les mouettes</h3>
+                        <P>Nuit à partir de 76€</P>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -118,14 +118,14 @@
                     <a href="#">
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                             alt="hébergement-canebière">
-                        <h2>Auberge Canebière</h2>
-                        <h3>Nuit à partir de 76€</h3>
+                        <h3>Auberge Canebière</h3>
+                        <p>Nuit à partir de 76€<p>
 
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
 
                     </a>
                 </div>
@@ -133,14 +133,14 @@
                     <a href="#">
                         <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                             alt="hébergement-canebière">
-                        <h2>Hôtel du port</h2>
-                        <h3>Nuit à partir de 76€</h3>
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de 76€<p>
 
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
 
                     </a>
                 </div>
@@ -148,71 +148,89 @@
                     <a href="#">
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                             alt="hébergement-canebière">
-                        <h2>Hôtel Les mouettes</h2>
-                        <h3>Nuit à partir de 76€</h3>
+                        <h3>Hôtel Les mouettes</h3>
+                        <p>Nuit à partir de 76€<p>
 
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
                     </a>
                 </div>
 
                 <a href="#">
-                    <h2>Afficher plus</h2>
+                    <h3>Afficher plus</h3>
                 </a>
 
             </div>
         </article>
         <!-- ----------------------------------------------aside---------------------------------------- -->
         <aside>
-            <h1>Les plus populaires</h1>
+            <h2>Les plus populaires</h2>
             <div class="populaires">
 
                 <div class="choix">
                     <a href="#">
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            alt="Hôtel-Le-soleil-du-matin">
-                        <h2>Hôtel Le soleil du matin</h2>
-                        <h3>Nuit à partir de 128€</h3>
+                        <div class="gauche">
 
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                alt="Hôtel-Le-soleil-du-matin">
+                        </div>
+                        <div class="droite">
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€
+                            <p>
+
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
+                        </div>
                     </a>
                 </div>
 
 
                 <div class="choix">
                     <a href="#">
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            alt="Hôtel-Le-soleil-du-matin">
-                        <h2>Hôtel Le soleil du matin</h2>
-                        <h3>Nuit à partir de 128€</h3>
+                        <div class="gauche">
 
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                alt="Hôtel-Le-soleil-du-matin">
+                        </div>
+                        <div class="droite">
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€
+                            <p>
+
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
+                        </div>
                     </a>
                 </div>
 
                 <div class="choix">
                     <a href="#">
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                            alt="Hôtel-Le-soleil-du-matin">
-                        <h2>Hôtel Le soleil du matin</h2>
-                        <h3>Nuit à partir de 128€</h3>
+                        <div class="gauche">
 
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-duotone fa-star"></i>
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                alt="Hôtel-Le-soleil-du-matin">
+                        </div>
+                        <div class="droite">
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€
+                            <p>
+
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-duotone fa-star"></i>
+                        </div>
                     </a>
                 </div>
             </div>
@@ -225,7 +243,7 @@
         <div class="ativités">
 
             <div class="card">
-                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="
+                <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="
                         Vieux-Port">
                     <h4><b>Vieux-Port</b></h4>
                 </a>
@@ -233,59 +251,65 @@
             </div>
 
             <div class="card">
-                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
-                        Vieux-Port">
-                    <h4><b>Vieux-Port</b></h4>
+                <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="
+                    Fort-de-Pomègues">
+                    <h4><b>Fort de Pomègues</b>
+                    </h4>
                 </a>
             </div>
 
             <div class="card">
-                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
-                        Vieux-Port">
-                    <h4><b>Vieux-Port</b></h4>
+                <a href="#"><img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="
+                    Parc-national-des-Calanques">
+                    <h4><b>Parc national des Calanques</b></h4>
                 </a>
             </div>
 
             <div class="card">
-                <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"" alt="
-                        Vieux-Port">
-                    <h4><b>Vieux-Port</b></h4>
+                <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="
+                    Notre-Dame-de-la-Garde">
+                    <h4><b>Notre-Dame-de-la-Garde</b></h4>
                 </a>
             </div>
 
         </div>
     </main>
-
+    <!--footer-->
     <footer>
-        <div class="À-propos">
-            <h4>À-propos</h4>
-            <a href="#">
-                <ul>
-                    <li>Fonctionnement du site</li>
-                    <li>Conditions générales</li>
-                    <li>Donnéés et confidentialité</li>
-                </ul>
-            </a>
+        <div class="contenair">
+            <p>À-propos
+            <p>
+                <a href="#">
+                    <ul>
+                        <li>Fonctionnement du site</li><br>
+                        <li>Conditions générales</li><br>
+                        <li>Donnéés et confidentialité</li>
+                    </ul>
+                </a>
         </div>
 
-        <div class="Nos hébergements">
-            <h4>Nos hébergements</h4>
-            <a href="#">
-                <ul>
-                    <li>Charte qualité</li>
-                    <li>Proposer votre hôtel</li>
-                </ul>
-            </a>
+        <div class="contenair">
+            <p>Nos hébergements
+            <p>
+                <a href="#">
+                    <ul>
+
+                        <li>Charte qualité</li><br>
+                        <li>Proposer votre hôtel</li>
+                    </ul>
+                </a>
         </div>
 
-        <div class="assitance">
-            <h4>Assitance</h4>
-            <a href="#">
-                <ul>
-                    <li>Centre d'aide</li>
-                    <li>Nous contacter</li>
-                </ul>
-            </a>
+        <div class="contenair">
+            <p>Assitance
+            <p>
+                <a href="#">
+                    <ul>
+
+                        <li>Centre d'aide</li><br>
+                        <li>Nous contacter</li>
+                    </ul>
+                </a>
         </div>
 
     </footer>
