mise à jour <aside>

--- a/index.html
+++ b/index.html
@@ -167,71 +167,71 @@
         </article>
         <!-- ----------------------------------------------aside---------------------------------------- -->
         <aside>
-            <h2>Les plus populaires</h2>
+            <h2>Les plus populaires<i class="fa-solid fa-chart-line"></i></h2>
             <div class="populaires">
 
                 <div class="choix">
-                    <a href="#">
-                        <div class="gauche">
 
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                alt="Hôtel-Le-soleil-du-matin">
-                        </div>
-                        <div class="droite">
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€
-                            <p>
+                    <div class="gauche">
 
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-duotone fa-star"></i>
-                        </div>
-                    </a>
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="Hôtel-Le-soleil-du-matin">
+                    </div>
+                    <div class="droite">
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <p>Nuit à partir de 128€
+                        <p>
+
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-duotone fa-star"></i>
+                    </div>
+
                 </div>
 
 
                 <div class="choix">
-                    <a href="#">
-                        <div class="gauche">
 
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                alt="Hôtel-Le-soleil-du-matin">
-                        </div>
-                        <div class="droite">
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€
-                            <p>
+                    <div class="gauche">
 
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-duotone fa-star"></i>
-                        </div>
-                    </a>
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="Hôtel-Le-soleil-du-matin">
+                    </div>
+                    <div class="droite">
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <p>Nuit à partir de 128€
+                        <p>
+
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-duotone fa-star"></i>
+                    </div>
+
                 </div>
 
                 <div class="choix">
-                    <a href="#">
-                        <div class="gauche">
 
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                alt="Hôtel-Le-soleil-du-matin">
-                        </div>
-                        <div class="droite">
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€
-                            <p>
+                    <div class="gauche">
 
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-duotone fa-star"></i>
-                        </div>
-                    </a>
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                            alt="Hôtel-Le-soleil-du-matin">
+                    </div>
+                    <div class="droite">
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <p>Nuit à partir de 128€
+                        <p>
+
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-duotone fa-star"></i>
+                    </div>
+
                 </div>
             </div>
         </aside>
@@ -275,41 +275,37 @@
         </div>
     </main>
     <!--footer-->
+
     <footer>
         <div class="contenair">
-            <p>À-propos
-            <p>
-                <a href="#">
-                    <ul>
-                        <li>Fonctionnement du site</li><br>
-                        <li>Conditions générales</li><br>
-                        <li>Donnéés et confidentialité</li>
-                    </ul>
-                </a>
+            <b>
+                <p>À-propos</p>
+            </b>
+            <a href="#">
+                <p>Fonctionnement du site</p>
+                <p>Conditions générales</p>
+                <p>Donnéés et confidentialité</p>
+            </a>
         </div>
 
         <div class="contenair">
-            <p>Nos hébergements
-            <p>
-                <a href="#">
-                    <ul>
-
-                        <li>Charte qualité</li><br>
-                        <li>Proposer votre hôtel</li>
-                    </ul>
-                </a>
+            <b>
+                <p>Nos hébergements</p>
+            </b>
+            <a href="#">
+                <p>Charte qualité</p>
+                <p>Proposer votre hôtel</p>
+            </a>
         </div>
 
         <div class="contenair">
-            <p>Assitance
-            <p>
-                <a href="#">
-                    <ul>
-
-                        <li>Centre d'aide</li><br>
-                        <li>Nous contacter</li>
-                    </ul>
-                </a>
+            <b>
+                <p>Assitance</p>
+            </b>
+            <a href="#">
+                <p>Centre d'aide</p>
+                <p>Nous contacter</p>
+            </a>
         </div>
 
     </footer>
