--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                     <input type="text" name="query" value="Marseille, France">
                     <button type="submit">Rechercher</button>
                 </form>
-
             </div>
         </div>
 
@@ -191,13 +190,12 @@
                     <div class="choix">
 
                         <div class="gauche">
-
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                alt="Hôtel-Le-soleil-du-matin">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                alt="Chambres-d'hôtes-Au-coeur-de-l'eau">
                         </div>
                         <div class="droite">
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€
+                            <h3>Chambres d'hôtes Au ceour de l'eau</h3>
+                            <p>Nuit à partir de 71€
                             <p>
 
                                 <i class="fa-solid fa-star"></i>
@@ -213,12 +211,12 @@
 
                         <div class="gauche">
 
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                                alt="Hôtel-Le-soleil-du-matin">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                alt="Hôtel-Bleu-et-Blanc">
                         </div>
                         <div class="droite">
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€
+                            <h3>Hôtel Bleu et Blanc</h3>
+                            <p>Nuit à partir de 68€
                             <p>
 
                                 <i class="fa-solid fa-star"></i>
