mise à jour nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- ---------------------------------Début header------------------------ -->
 
     <header>
-        <div class="hebergements">
+        <div class="contenair">
 
             <div class="texte-top">
                 <h1>Trouver votre hébergement pour des vacances de rêves </h1>
@@ -40,13 +40,15 @@
                 <i class="fa-solid fa-location-dot"></i>
                 <form action="/search" method="get">
                     <input type="text" name="query" value="Marseille, France">
-                    <button type="submit">Rechercher</button>
+                    <button type="submit">Rechercher<i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
             </div>
         </div>
 
         <div class="filtres">
-            <h3>Filtres</h3>
+
+            <h2>Filtres</h2>
+
             <button><i class="fa-solid fa-money-bill-wave"></i>Économique</button>
             <button><i class="fa-solid fa-person"></i>Familial</button>
             <button><i class="fa-solid fa-heart"></i>Romantique</button>
