mise à jour commentaires html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <!-- Fin nav s-->
 
-    <!-- ---------------------------------Début header------------------------ -->
+    <!-- Début header -->
 
     <header>
         <div class="contenair">
@@ -61,7 +61,7 @@
         </div>
     </header>
 
-    <!-- -------------------------------------Fin header------------------------------ -->
+    <!-- Fin header -->
     <section>
         <article>
             <h2>Hébergement à Marseille</h2>
@@ -107,7 +107,7 @@
                     </a>
                 </div>
             </div>
-            <!-- ------------------------------------------2eme migne-------------------------------------------------- -->
+            <!-- 2eme ligne -->
             <div class="second-choice">
                 <div class="option">
                     <a href="#">
@@ -161,7 +161,7 @@
                 <h4>Afficher plus</h4>
             </a>
         </article>
-        <!-- ----------------------------------------------aside---------------------------------------- -->
+        <!-- aside -->
         <aside>
             <h2>Les plus populaires<i class="fa-solid fa-chart-line"></i></h2>
             <a href="#">
